cushy-macros/src/snapshots/gooey_macros__animation__test__empty_enum.snap
---
source: cushy-macros/src/animation.rs
expression: unparse(ok)
---
impl ::cushy::animation::LinearInterpolate for Enum {
    /**# Panics
 Panics if the the enum variants are overflown (this can only happen on percentages outside 0..1 range).*/
    fn lerp(&self, __target: &Self, __percent: f32) -> Self {
        fn variant_to_index(__v: &Enum) -> usize {
            match __v {}
        }
        let __self = variant_to_index(&self);
        let __target = variant_to_index(&self);
        match ::cushy::animation::LinearInterpolate::lerp(
            &__self,
            &__target,
            __percent,
        ) {
            _ => unreachable!(),
        }
    }
}

