cushy-macros/src/snapshots/gooey_macros__animation__test__struct_.snap
---
source: cushy-macros/src/animation.rs
expression: unparse(ok)
---
impl ::cushy::animation::LinearInterpolate for HelloWorld {
    /**# Panics
 Panics if any field's lerp panics (this should only happen on percentages outside 0..1 range).*/
    fn lerp(&self, __target: &Self, __percent: f32) -> Self {
        HelloWorld {
            fielda: ::cushy::animation::LinearInterpolate::lerp(
                &self.fielda,
                &__target.fielda,
                __percent,
            ),
            fieldb: ::cushy::animation::LinearInterpolate::lerp(
                &self.fieldb,
                &__target.fieldb,
                __percent,
            ),
        }
    }
}

